--- a/src/Aspire.Dashboard/Resources/ControlsStrings.resx
+++ b/src/Aspire.Dashboard/Resources/ControlsStrings.resx
@@ -227,6 +227,33 @@
   <data name="ChartContainerShowCountLabel" xml:space="preserve">
     <value>Show count</value>
   </data>
+  <data name="ChartContainerNoneSelected" xml:space="preserve">
+    <value>(None)</value>
+  </data>
+  <data name="MetricTableStartColumnHeader" xml:space="preserve">
+    <value>Start</value>
+  </data>
+  <data name="MetricTableEndColumnHeader" xml:space="preserve">
+    <value>End</value>
+  </data>
+  <data name="MetricTableValueColumnHeader" xml:space="preserve">
+    <value>Value</value>
+  </data>
+  <data name="MetricTableCountColumnHeader" xml:space="preserve">
+    <value>Count</value>
+  </data>
+  <data name="MetricTableShowAllValues" xml:space="preserve">
+    <value>Show all values</value>
+  </data>
+  <data name="MetricTableShowLatestValues" xml:space="preserve">
+    <value>Show the latest 10 values</value>
+  </data>
+  <data name="MetricTableShowNonValueChanges" xml:space="preserve">
+    <value>Don't only show value changes</value>
+  </data>
+  <data name="MetricTableShowOnlyValueChanges" xml:space="preserve">
+    <value>Only show value changes</value>
+  </data>
   <data name="SelectAResource" xml:space="preserve">
     <value>Select a resource</value>
   </data>
